# gpu_course

./: .gitignore  README.md
colab/: CudaExample.ipynb  OpenCLExample.ipynb  square.cu
examples/: CMakeLists.txt  main.cu
examples/OpenCL/: CMakeLists.txt  main.cpp
presentations/: ~$Вычисления на GPU.pptx  Вычисления на GPU.pptx  Задачи.pptx
